<resources>
    <string name="app_name">Coffee Geysha</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Coffee Geysha</string>
    <string name="nav_header_subtitle">Make coffee great again</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_coffee_bag">Add a new coffee bag</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_coffee_bags">Coffee bags</string>
    <string name="menu_coffee_drinks">Drinks</string>

    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>

    <string name="title_coffee_bag_form">Enter a new coffee bag</string>

    <string name="origin">Origin</string>
    <string name="brand">Brand</string>
    <string name="name">Name</string>
    <string name="flavors">Flavors</string>
    <string name="placeholder">Lorem</string>

    <string name="desc_coffee_bag">Coffee bag</string>

    <!--    Messages-->
    <string name="message_home_title">Welcome to Coffee Geysha App</string>
</resources>