<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.coffeegeysha.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_coffee_bags"
        android:name="com.example.coffeegeysha.ui.coffee_bags.CoffeeListFragment"
        android:label="@string/menu_coffee_bags"
        tools:layout="@layout/fragment_coffee_list" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.coffeegeysha.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.coffeegeysha.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_coffee_drinks"
        tools:layout="@layout/fragment_slideshow" />
</navigation>